# bevy_persist

./: Cargo.toml
bevy_persist/: Cargo.toml
bevy_persist/examples/: advanced.rs  basic.rs
bevy_persist/src/: lib.rs  storage.rs
bevy_persist/src/storage/: filesystem.rs  wasm_storage.rs
bevy_persist/tests/: integration_test.rs
