[workspace]
members = ["bevy_persist", "bevy_persist_derive"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "^0.18", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "^0.12"
inventory = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.27"
tempfile = "3.8"

# For the derive macro
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"