[package]
name = "bevy_persist"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Alex Gilbert"]
description = "Automatic persistence for Bevy resources with change detection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Alex-Gilbert/bevy_persist"
homepage = "https://github.com/Alex-Gilbert/bevy_persist"
documentation = "https://docs.rs/bevy_persist"
readme = "README.md"
keywords = ["bevy", "gamedev", "persistence", "save", "settings"]
categories = ["game-development", "config"]

[features]
default = ["dev"]
dev = []
wasm = ["web-sys", "js-sys", "wasm-bindgen"]
prod = ["directories", "base64", "sha2"]
secure = ["prod", "aes-gcm", "argon2"]

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
inventory = { workspace = true }
bevy_persist_derive = { version = "0.1.0", path = "../bevy_persist_derive" }
directories = { version = "5.0", optional = true }
base64 = { version = "0.22", optional = true }
sha2 = { version = "0.10", optional = true }
aes-gcm = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Storage"], optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
bevy = { workspace = true }
tempfile = { workspace = true }
env_logger = "0.11"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"